# Haskell-Repo

./: Haskell-Repo.cabal  LICENSE  README.md
Chapter2.HelloHaskell0/: FunctionWithLet.hs  FunctionWithWhere.hs  exercise1.hs  exercise2.hs  exercise3.hs  heal.hs  learn.hs  practice.hs  test.hs  waxOn.hs
Chapter4.Basic.DataTypes/: greetIfCool1.hs  greetIfCool2.hs
Chapter5.Types/: ChapterExercises.hs  FixIt1.hs  Gtype-func.hs  Partial.hs  TypeKwonDoe.hs  subtractStuff.hs  take.hs  tripleIt.hs  typeInference1.hs  uncurry.hs
Chapter6.Typeclasses/: Chapter6.Exercises.2.hs  Chapter6.Exercises.hs  Chapter6.Exercises3.hs  CricleType.hs  Date.hs  EqInstances.hs  Identity.hs  Instances.hs  Trivial.hs  checkOrd.hs  derivingInstances.hs  divideThenAdd.hs
Chapter7.MFuncPatterns/: Chapter7.Exercises.hs  Chapter7.Exercises2.hs  GrabBag.hs  GuardDutyExercise.hs  Guards.hs  HOF.hs  arith2.hs  artfulDodgy.hs  caseExpressions.hs  casePractice.hs  chapter7.Exercises3.hs  greetIfCool3.hs  isItTwo.hs  matchingTuples1.hs  myAbsGuards.hs  patternTuples.hs  registeredUser1.hs  registeredUser2.hs  varietyExercise.hs  wherePenguins.hs
Chapter8.Recursion/: Chapter8.Exercises.hs  Chapter8.Exercises2.hs  brokenFact1.hs  dividedBy.hs  factorial.hs  fibonacci.hs  inc.hs  maximum.hs  patternMatching.hs  take5.hs
Chapter9.Lists/: EnumFromTo.hs  listComp.hs  myTail.hs  thyFearful.hs
Exercises/: addTwo.hs  caseX.hs
PatternMatching/: trivial.hs
RealWorldHaskell/: AlgebraicVector.hs  BookStore.hs  Bool.hs  DefiningTypes.hs  Distinction.hs  InteractWith  ListADT.hs  Nullable.hs  SplitLines.hs  (+3 more)
(+25 files in other folders)
