name:                Haskell-Repo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tracixho/Haskell-Repo#readme
license:             BSD3
license-file:        LICENSE
author:              Traci Ho
maintainer:          tracixho@gmail.com
copyright:           Traci Ho
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Haskell-Repo
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
